# n8n-workflow-sync

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  prd.md
.cursor/rules/: node-versions.mdc
.github/workflows/: build-macos.yml  coverage.yml  test.yml
src/: api.rs  config.rs  lib.rs  main.rs  nodes.rs
