[package]
name         = "n8n-workflow-sync"
version      = "0.1.0"
edition      = "2024"
license      = "MIT OR Apache-2.0"
description  = "Pull, edit and push n8n workflows with Git."
readme       = "README.md"
repository   = "https://github.com/dunctk/n8n-workflow-sync"
keywords     = ["cli", "n8n", "workflow", "git"]

[dependencies]
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
confy       = "0.6"
git2        = "0.20"
anyhow      = "1"
tracing     = "0.1"
url         = "2"
dialoguer   = "0.11"
self_update = "0.42"

[dev-dependencies]
wiremock = "0.6"
serial_test = "2"
temp-env = "0.3"
